# app-bitcoin-new

./: .clang-format  .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml  flake.nix  gdb.sh  ledger_app.toml  package-lock.json  package.json  requirements.txt  script-nanos.ld  script-nanox.ld  shell.nix  sonar-project.properties
.doxygen/: Doxyfile
bitcoin_client/: .flake8  .gitignore  CHANGELOG.md  README.md  __init__.py  _script.py  client.py  client_base.py  client_command.py  client_legacy.py  command.py  command_builder.py  common.py  descriptor.py  key.py  merkle.py  psbt.py  pyproject.toml  setup.cfg  wallet.py
bitcoin_client/exception/: __init__.py  device_exception.py  errors.py
bitcoin_client/ledger_bitcoin/: __init__.py  _base58.py  _script.py  _serialize.py  base58.py  bip0327.py  client.py  client_base.py  client_command.py  client_legacy.py  command_builder.py  common.py  descriptor.py  errors.py  key.py  merkle.py  psbt.py  segwit_addr.py  test_merkleTree.py  transport.py  verifier.py  wallet.py  withdraw.py
bitcoin_client/ledger_bitcoin/bip380/: README  key.py
bitcoin_client/ledger_bitcoin/bip380/descriptors/: __init__.py  checksum.py  errors.py  parsing.py  utils.py
bitcoin_client/ledger_bitcoin/bip380/miniscript/: __init__.py  errors.py  fragments.py  parsing.py  property.py  satisfaction.py
bitcoin_client/ledger_bitcoin/bip380/utils/: bignum.py  hashes.py  ripemd_fallback.py  script.py
bitcoin_client/ledger_bitcoin/btchip/: btchip.py
bitcoin_client/ledger_bitcoin/embit/: LICENSE  README.md  base.py  base58.py  bech32.py  bip32.py  bip39.py  bip85.py  compact.py  ec.py  finalizer.py  hashes.py  misc.py  networks.py  psbt.py  psbtview.py  script.py  slip39.py  transaction.py
bitcoin_client/ledger_bitcoin/embit/descriptor/: arguments.py  base.py  checksum.py  descriptor.py  miniscript.py  taptree.py
bitcoin_client/ledger_bitcoin/embit/liquid/: addresses.py  blech32.py  blip32.py  descriptor.py  finalizer.py  networks.py  pset.py  psetview.py  slip77.py  transaction.py
bitcoin_client/ledger_bitcoin/embit/util/: ctypes_secp256k1.py  key.py  py_ripemd160.py  py_secp256k1.py
bitcoin_client/ledger_bitcoin/embit/wordlists/: base.py  bip39.py  slip39.py
bitcoin_client/ledger_bitcoin/exception/: device_exception.py  errors.py
bitcoin_client/tests/: README.md  conftest.py  requirements.txt  test_client_legacy.py  test_get_extended_pubkey_legacyapp.py  test_get_master_fingerprint_legacyapp.py  test_get_wallet_address_legacyapp.py  test_ripemd160.py  test_sign_message_legacyapp.py  test_sign_psbt.py  test_sign_psbt_legacyapp.py
bitcoin_client/tests/app-binaries/: bitcoin-1.6.5.elf  bitcoin-testnet-1.6.5.elf
bitcoin_client/tests/automations/: sign_message.json
bitcoin_client_js/: .eslintrc.json  .gitignore  .prettierignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
bitcoin_client_rs/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
bitcoin_client_rs/examples/ledger_hwi/: Cargo.toml  README.md
bitcoin_client_rs/examples/ledger_hwi/src/: main.rs  transport.rs
bitcoin_client_rs/src/: apdu.rs  async_client.rs  client.rs  command.rs  common.rs  error.rs  interpreter.rs  lib.rs  merkle.rs  psbt.rs  wallet.rs
bitcoin_client_rs/tests/: client.rs
bitcoin_client_rs/tests/data/: get_extended_pubkey.json  get_wallet_address.json  register_wallet.json  sign_psbt.json
bitcoin_client_rs/tests/utils/: mod.rs
dev-tools/: make_psbt_from_tx.py  tag_apdus.py  test_sign_psbt_with_sighash_types.ipynb
doc/: APDU.md  COMMANDS.md  README.md  TRANSACTION.md  bitcoin.asc  bitcoin.md  debugging.md  merkle.md  musig.md  wallet.md
fuzzing/: CMakeLists.txt  README.md  fuzz_tx_parser.cc
fuzzing/extra/: TxParser.cmake
ragger_bitcoin/: __init__.py  pyproject.toml  ragger_bitcoin.py  ragger_instructions.py  setup.cfg
src/: address.c  address.h  app_settings.c  app_settings.h  commands.h  constants.h  context.h  crypto.c  crypto.h  cxram_stash.c  cxram_stash.h  error_codes.h  globals.h  io.c  main.c  main.h  merkle.c  merkle.h  secp256k1.c  secp256k1.h  sw.h  types.h
test_utils/: README.md  __init__.py  authproxy.py  bip0327.py  fixtures.py  musig2.py  requirements.txt  ripemd.py  speculos.py  taproot.py  taproot_sighash.py  txmaker.py  wallet_policy.py
tests/: README.md  bitcoin.conf  caveats.txt  conftest.py  instructions.py  requirements.txt  setup_script.sh  temp.py  test_appname_cmd.py  test_dashboard.py  test_e2e_miniscript.py  test_e2e_multisig.py  test_e2e_musig2.py  test_e2e_tapscripts.py  test_error_cmd.py  test_get_address.py  test_get_extended_pubkey.py  test_get_master_fingerprint.py  test_get_pubkey.py  test_get_sum_of_squares_cmd.py  test_get_version.py  test_get_wallet_address.py  test_get_wallet_address_v1.py  test_musig2.py  test_name_version.py  test_protocol.py  test_pubkey_cmd.py  test_register_wallet.py  test_register_wallet_v1.py  test_sighash_setting.py  test_sign_cmd.py  test_sign_message.py  test_sign_multisig.py  test_sign_psbt.py  test_sign_psbt_musig.py  test_sign_psbt_v1.py  test_sign_psbt_with_sighash_types.py  test_sign_withdraw.py  test_status_word.py  test_version_cmd.py
tests-legacy/: README.md  conftest.py  prepare_tests.sh  prepare_tests_lib.sh  prepare_tests_native.sh  test_get_random.py  test_sign.py
unit-tests/: CMakeLists.txt  README.md  test_apdu_parser.c  test_base58.c  test_bip32.c  test_bitvector.c  test_buffer.c  test_crypto.c  test_display_utils.c  test_extract_bip32_derivation.c  test_format.c  test_get_preimage.c  test_merkle_return_values.c  test_musig_zeroing.c  test_parser.c  test_psbt_parse.c  test_script.c  test_sighash.c  test_tx_parser.c  test_tx_utils.c  test_wallet.c  test_write.c
unit-tests/libs/: crypto_mocks.c  crypto_mocks.h  cx_hash_mock.c  cx_hash_mock.h  merkle_test_mocks.c  merkle_test_mocks.h  mock_dispatcher.c  mock_dispatcher.h  musig_test_mocks.c  musig_test_mocks.h  psbt_parse.c  psbt_parse.h  sha-256.c  sha-256.h
unit-tests/mock_includes/: cx.h  cx_errors.h  lcx_hash.h  lcx_sha256.h  ledger_assert.h  os.h
(+327 files in other folders)
