[metadata]
name = ledger-bitcoin
version = 0.0.1
author = Ledger
author_email = hello@ledger.fr
description = Client for Ledger Bitcoin application
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LedgerHQ/app-bitcoin-new
project_urls =
    Bug Tracker = https://github.com/LedgerHQ/app-bitcoin-new/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src