[metadata]
name = ledger_bitcoin
version = attr: ledger_bitcoin.__version__
author = Ledger
author_email = hello@ledger.fr
description = Client for Ledger Nano Bitcoin application
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LedgerHQ/app-bitcoin-new
project_urls =
    Bug Tracker = https://github.com/LedgerHQ/app-bitcoin-new/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires=
  bip32~=3.0,
  coincurve~=18.0,
  typing-extensions>=3.7
  ledgercomm>=1.1.0
  packaging>=21.3

[options.package_data]
* = py.typed

[options.extras_require]
hid = hidapi>=0.9.0.post3

[options.packages.find]
exclude =
    tests
    tests.utils
