[package]
name = "ledger_bitcoin_client"
version = "0.1.0"
authors = ["Edouard Paris <m@edouard.paris>"]
edition = "2018"
description = "Ledger Bitcoin application client"
repository = "https://github.com/LedgerHQ/app-bitcoin-new"
license = "Apache-2.0"
documentation = "https://docs.rs/ledger_bitcoin_client/"

[features]
default = ["async"]
async = ["async-trait"]

[dependencies]
async-trait = { version = "0.1", optional = true }
bitcoin = { version = "0.29.1", default-features = false, features = ["no-std"] }

[workspace]
members = ["examples/ledger_hwi"]

# Dependencies used for tests and examples only.
[dev-dependencies]
tokio = { version = "1.21", features = ["macros", "rt", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
