[package]
name = "ledger_bitcoin_client"
version = "0.3.2"
authors = ["Edouard Paris <m@edouard.paris>"]
edition = "2018"
description = "Ledger Bitcoin application client"
repository = "https://github.com/LedgerHQ/app-bitcoin-new"
license = "Apache-2.0"
documentation = "https://docs.rs/ledger_bitcoin_client/"

[features]
default = ["async", "paranoid_client"]
async = ["async-trait"]

# The paranoid_client feature makes sure that the client independently derives wallet
# policy addresses using rust-miniscript, returning an error if they do not match.
# It is strongly recommended to not disable this feature, unless the same check is
# performed elsewhere.
# Read more at https://donjon.ledger.com/lsb/019/
paranoid_client = ["miniscript"]

[dependencies]
async-trait = { version = "0.1", optional = true }
bitcoin = { version = "0.30", default-features = false, features = ["no-std"] }
miniscript = { version = "10.0", optional = true, default-features = false, features = ["no-std"] }

[workspace]
members = ["examples/ledger_hwi"]

# Dependencies used for tests and examples only.
[dev-dependencies]
hex = "0.4.3"
tokio = { version = "1.21", features = ["macros", "rt", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0"
