[metadata]
name = ragger_bitcoin
version = 0.0.1
author = Ledger
author_email = hello@ledger.fr
description = Ragger wrapper for Leger Bitcoin Client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LedgerHQ/app-bitcoin-new
project_urls =
    Bug Tracker = https://github.com/LedgerHQ/app-bitcoin-new
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires=
        ledger-bitcoin
